...
            if (EquipmentFieldRules.isVisible(Field.DRAW_LENGTH, bowType, isSetup, rearStabSide)) {
                LabeledValueRow("Draw Length", UnitFormatting.length(config.drawLength, unitSystem, digits = 2))
            }
            if (bowType == BowType.COMPOUND) {
                config.letOffPct?.let { LabeledValueRow("Let-off", UnitFormatting.percent(it)) }
                config.peepHeight?.let { LabeledValueRow("Peep Height", UnitFormatting.length(it, unitSystem)) }
                config.dLoopLength?.let { LabeledValueRow("D-Loop", UnitFormatting.length(it, unitSystem, digits = 3)) }
            }
            if (EquipmentFieldRules.isVisible(Field.BRACE_HEIGHT, bowType, isSetup, rearStabSide)) {
                config.braceHeight?.let { LabeledValueRow("Brace Height", UnitFormatting.length(it, unitSystem, digits = 3)) }
            }
        }

...
